delete route working properly
