# cmd/docs/swagger.yaml
@@ -138,6 +138,33 @@ paths:
       summary: Refresh token for users
       tags:
       - Authentication-Service
+  /user/delete/{id}:
+    delete:
+      operationId: Delete user
+      parameters:
+      - description: Id of the user to be deleted
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/pb.RegisterResponse'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/pb.RegisterResponse'
+        "502":
+          description: Bad Gateway
+          schema:
+            $ref: '#/definitions/pb.RegisterResponse'
+      summary: Delete user
+      tags:
+      - User-Section
 securityDefinitions:
   ApiKeyAuth:
     in: header
