# pkg/auth/routes.go
@@ -15,13 +15,15 @@ func RegisterRoutes(r *gin.Engine, c *config.Config) *ServiceClient {
     // Create a new group for the auth routes that require authentication
     authRoutes := r.Group("/auth")
     authRoutes.Use(authMiddleware.RefreshTokenMiddleware)
-
-    routes := r.Group("/auth")
-    routes.DELETE("/delete/:id",svc.DeleteUser)
-    routes.POST("/register", svc.Register)
-    routes.POST("/login", svc.Login)
     authRoutes.POST("/token-refresh",svc.TokenRefresh)
 
+    routes := r.Group("/auth")
+    routes.POST("/register", svc.Register)
+    routes.POST("/login", svc.Login)
+    
+    userRoutes := r.Group("/user")
+    userRoutes.DELETE("/delete/:id",svc.DeleteUser)
+  
     return svc
 }
 
